modified jlesage/jdownloader-2 to launch mcaselector